# AI-Business-Intelligence

./: .env.example  .gitignore  Makefile  docker-compose.yml  main.py  project_structure.txt  pyproject.toml  stracture.py
deploy/docker/: Dockerfile.api  Dockerfile.rag
services/api/: pyproject.toml
services/api/src/api/: router.py
services/churn_pipeline/: .gitignore  main.py  pyproject.toml
services/churn_pipeline/configs/: base.yaml
services/churn_pipeline/notebooks/: 01_data_ingation.ipynb
services/churn_pipeline/src/churn_pipeline/Core/: io.py
services/churn_pipeline/src/churn_pipeline/config_manager/: config.py  settings.py
services/churn_pipeline/src/churn_pipeline/data/: ingestion.py  validation.py
services/churn_pipeline/src/churn_pipeline/exception/: base.py  data.py  exception.py  training.py  validation.py
services/churn_pipeline/src/churn_pipeline/features/: transformations.py
services/churn_pipeline/src/churn_pipeline/logging/: logging.py
services/churn_pipeline/src/churn_pipeline/models/: evaluator.py  trainer.py
services/churn_pipeline/src/churn_pipeline/pipelines/: training_pipeline.py
services/clv_pipeline/: pyproject.toml
services/clv_pipeline/src/clv_pipeline/pipelines/: training_pipeline.py
services/rag_chatbot/: pyproject.toml
services/rag_chatbot/src/rag_chatbot/: bot.py
