[project]
name = "ai-business-intelligence"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "packages/common_config",
    "packages/common_exceptions",
    "services/*"
]

[tool.uv.sources]
common-config = { workspace = true }
common-exceptions = { workspace = true }