[project]
name = "churn-pipeline"
version = "0.1.0"
description = "Churn pipeline service"
requires-python = ">=3.12"

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "pydantic",
    "pydantic-settings",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/churn_pipeline"]